--- a/index.html
+++ b/index.html
@@ -510,6 +510,7 @@
             <a target="_blank" href="https://www.instagram.com/touched_by_terry/"><img src="images/icon-instagram.svg" alt="instagram icon" /></a>
             <!-- <a target="_blank" href="https://twitter.com/?lang=pl"><img src="images/icon-twitter.svg" alt="twitter icon" /></a>
             <a target="_blank" href="https://pl.linkedin.com/"><img src="images/icon-linkedin.svg" alt="linkedin icon" /></a> -->
+            
           </div>
         </div>
 
@@ -532,7 +533,7 @@
           <a href="#" class="links"><img src="images/icon-map.svg" alt="map icon" />Cape Town</a>
           <a href="tel:+27749494706" class="links"><img src="images/icon-phone.svg" alt="phone icon" />+27 74 949 4706</a>
           <!-- <a href="#" class="links"><img src="images/icon-mail.svg" alt="mail icon" />mail: apcustomsza@gmail.com</a> -->
-
+          <a target="_blank" href="https://www.instagram.com/iamtxpo/" class="links"><img src="images/icon-instagram.svg" alt="instagram icon" /><p style="padding:0px ;">Site created by Tshepo</p></a>
           
         </div>
       </div>
