--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Konirams Nails & Beauty</title>
+    <title>Touched by Terry</title>
     <meta
       name="description"
       content="Touched by Terry is a beauty company. We offer the best quality on the market! Call us today!"
