--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
       </div>
 
       <div class="button">
-        <a target="_blank" href="https://www.instagram.com/konirams_nails_and_beautybar/" class="btn">All Works</a>
+        <a target="_blank" href="https://www.instagram.com/touched_by_terry/" class="btn">All Works</a>
       </div>
     </section>
 
